- Add content to ChatPage - Align SendButton to Down (not center) - Add Animation of color is ChatField is blank - Add enabled prop to IconButton - Make OutlinedButton blury - Rename ViewModel getters (and fix import bug caused by the same filename)

--- a/frontend/src/components/ai-chat-box/ai-chat-box.css
+++ b/frontend/src/components/ai-chat-box/ai-chat-box.css
@@ -12,9 +12,10 @@
 
 .input-row {
     display: flex;
-    align-items: center;
+    align-items: end;
     gap: 10px;
 }
+
 
 .textfield-wrapper {
     flex: 1; /* Поле ввода растягивается */
